@@ -1,5 +1,15 @@
 2004-05-11  Bruno Haible  <bruno@clisp.org>
 
+	Optimize constants a little better.
+	* compiler.lisp (c-NIL): Use *seclass-foldable* instead of
+	*seclass-pure*.
+	(c-CONST): Use *seclass-foldable* instead of *seclass-pure*, if
+	appropriate.
+	(c-PROGN, c-AND, c-OR, c-QUOTE, c-SETQ, c-PSETQ, c-MULTIPLE-VALUE-SETQ,
+	c-TAGBODY): Use *seclass-foldable* instead of *seclass-pure*.
+
+2004-05-11  Bruno Haible  <bruno@clisp.org>
+
 	* arilev0.d (divu_3216_1616) [SPARC64]: Add missing newline in asm
 	statement.
 	(divu_3216_3216, divu_3232_3232, divu_6432_3232) [SPARC64]: Likewise.
